<?xml version="1.0"?>
<package format="2">
  <name>manualcalibra</name>
  <version>0.0.1</version>
  <description>The manualcalibra package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend> <!-- 添加这一行 -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend> <!-- 添加这一行 -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
